--- a/src/App.css
+++ b/src/App.css
@@ -42,16 +42,12 @@
   justify-content: flex-end;
   align-items: flex-end;
   padding-right: 20px;
-
   font-size: 65px;
 }
 
+/* Buttons */
 .buttons {
   display: flex;
-}
-
-.buttons:hover {
-  cursor: pointer;
 }
 
 .number-buttons {
@@ -66,6 +62,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: white;
 }
 
 .button {
@@ -75,22 +72,24 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: white;
 }
 
-.action-buttons {
+.action-button {
   background-color: #b30000;
   color: white;
   font-size: 50px;
 }
-
 .equal-button {
   background-color: #ff8000;
+  color: white;
 }
 
 /* Hover & Action */
 .button:hover,
 .big-button:hover {
   background-color: rgb(224, 224, 224);
+  cursor: pointer;
 }
 
 .button:active,
